--- a/what-i-read.html
+++ b/what-i-read.html
@@ -18,8 +18,8 @@
   <meta property="article:tag" content="software" />
   <meta property="article:tag" content="engineering" />
   <meta property="og:url" content="https://pineman.github.io/what-i-read.html" />
-  <meta property="article:published_time" content="20230807" />
-  <meta property="article:modified_time" content="20230807" />
+  <meta property="article:published_time" content="20230808" />
+  <meta property="article:modified_time" content="20230808" />
   <title>What I read</title>
   <meta property="og:title" content="What I read" />
   <meta name="description" content="What I read" />
@@ -30,9 +30,11 @@
 <a href="index.html">&lt; back</a>
 <article>
   <h1>What I read</h1>
-  <h6>last updated: 2023/08/07</h6>
+  <h6>last updated: 2023/08/08</h6>
 <h4>August 2023</h4>
 <ul>
+  <li><a href="https://www.youtube.com/watch?v=mrGfahzt-4Q">https://www.youtube.com/watch?v=mrGfahzt-4Q</a> </li>
+  <li><a href="https://www.youtube.com/watch?v=6avJHaC3C2U">https://www.youtube.com/watch?v=6avJHaC3C2U</a> </li>
   <li><a href="https://morningcoffee.io/interfaces-in-ruby.html">https://morningcoffee.io/interfaces-in-ruby.html</a> </li>
   <li><a href="https://www.youtube.com/watch?v=J1f5b4vcxCQ">https://www.youtube.com/watch?v=J1f5b4vcxCQ</a> </li>
 </ul>
