--- a/what-i-read.html
+++ b/what-i-read.html
@@ -33,6 +33,8 @@
   <h6>last updated: 2023/08/08</h6>
 <h4>August 2023</h4>
 <ul>
+  <li><a href="https://www.youtube.com/watch?v=eglMl21DJz0">https://www.youtube.com/watch?v=eglMl21DJz0</a> </li>
+  <li><a href="https://www.applied-cartography.com/goon-squad?t=4">https://www.applied-cartography.com/goon-squad?t=4</a> </li>
   <li><a href="https://www.youtube.com/watch?v=mrGfahzt-4Q">https://www.youtube.com/watch?v=mrGfahzt-4Q</a> </li>
   <li><a href="https://www.youtube.com/watch?v=6avJHaC3C2U">https://www.youtube.com/watch?v=6avJHaC3C2U</a> </li>
   <li><a href="https://morningcoffee.io/interfaces-in-ruby.html">https://morningcoffee.io/interfaces-in-ruby.html</a> </li>
