--- a/what-i-read.html
+++ b/what-i-read.html
@@ -18,8 +18,8 @@
   <meta property="article:tag" content="software" />
   <meta property="article:tag" content="engineering" />
   <meta property="og:url" content="https://pineman.github.io/what-i-read.html" />
-  <meta property="article:published_time" content="20230808" />
-  <meta property="article:modified_time" content="20230808" />
+  <meta property="article:published_time" content="20230815" />
+  <meta property="article:modified_time" content="20230815" />
   <title>What I read</title>
   <meta property="og:title" content="What I read" />
   <meta name="description" content="What I read" />
@@ -30,9 +30,13 @@
 <a href="index.html">&lt; back</a>
 <article>
   <h1>What I read</h1>
-  <h6>last updated: 2023/08/08</h6>
+  <h6>last updated: 2023/08/15</h6>
 <h4>August 2023</h4>
 <ul>
+  <li><a href="https://josephg.com/blog/war-over-being-nice/">https://josephg.com/blog/war-over-being-nice/</a> </li>
+  <li><a href="https://pracucci.com/kubernetes-dns-resolution-ndots-options-and-why-it-may-affect-application-performances.html">https://pracucci.com/kubernetes-dns-resolution-ndots-options-and-why-it-may-affect-application-performances.html</a> </li>
+  <li><a href="https://dashbit.co/blog/why-the-dot">https://dashbit.co/blog/why-the-dot</a> </li>
+  <li><a href="https://smallrye.io/smallrye-stork/1.1.1/load-balancer/power-of-two-choices/">https://smallrye.io/smallrye-stork/1.1.1/load-balancer/power-of-two-choices/</a> </li>
   <li><a href="https://www.youtube.com/watch?v=eglMl21DJz0">https://www.youtube.com/watch?v=eglMl21DJz0</a> </li>
   <li><a href="https://www.applied-cartography.com/goon-squad?t=4">https://www.applied-cartography.com/goon-squad?t=4</a> </li>
   <li><a href="https://www.youtube.com/watch?v=mrGfahzt-4Q">https://www.youtube.com/watch?v=mrGfahzt-4Q</a> </li>
