--- a/what-i-read.html
+++ b/what-i-read.html
@@ -33,6 +33,7 @@
   <h6>last updated: 2023/08/21</h6>
 <h4>August 2023</h4>
 <ul>
+  <li><a href="https://luispcosta.com/managing-small-team">https://luispcosta.com/managing-small-team</a> </li>
   <li><a href="https://www.youtube.com/watch?v=SquGNt4FhY0">https://www.youtube.com/watch?v=SquGNt4FhY0</a> </li>
   <li><a href="https://newosxbook.com/articles/MemoryPressure.html">https://newosxbook.com/articles/MemoryPressure.html</a> </li>
   <li><a href="https://stackoverflow.com/questions/32664679/what-is-the-limit-on-virtual-memory-for-ios">https://stackoverflow.com/questions/32664679/what-is-the-limit-on-virtual-memory-for-ios</a> </li>
