--- a/what-i-read.html
+++ b/what-i-read.html
@@ -33,6 +33,7 @@
   <h6>last updated: 2023/09/25</h6>
 <h4>September 2023</h4>
 <ul>
+  <li><a href="https://www.ash-hq.org/">https://www.ash-hq.org/</a> </li>
   <li><a href="https://news.ycombinator.com/item?id=37539350">https://news.ycombinator.com/item?id=37539350</a> "Use your database to power state machines"</li>
   <li><a href="https://c9x.me/compile/">https://c9x.me/compile/</a> </li>
   <li><a href="https://100r.co/site/uxn.html">https://100r.co/site/uxn.html</a> </li>
