--- a/ruby-bug-shell-gem.html
+++ b/ruby-bug-shell-gem.html
@@ -52,7 +52,7 @@
 <p>So, after careful deliberation, I decide to open a <a href="https://bugs.ruby-lang.org/issues/19624">bug in ruby</a>! Amazingly, it gets a reply in just 3 hours on a sunday! Looks like Nobuyoshi Nakada indeed considered it a bug in MRI, and even implemented a pretty smart test case. Truly a testament to async open source as the great software development model of the world, as an old friend reminded me, after I kept him waiting for beers as I was typing out the bug report very nervously :)</p>
 <p><strong>UPDATE 20/09/2023</strong>: Turns out it wasn't a bug in ruby after all!... I'll declare this as "not my fault" as I explicitly asked if the code was incorrect 😅</p>
 <p>All in all, a pretty cool win for me, even if I couldn't actually fix the (microcospic!) bug myself, and it took a whole weekend! Hopefully this kicks off a series of open source contributions for me :)</p>
-<aside id="footnotes" class="footnotes footnotes-end-of-document" role="doc-endnotes">
+<section id="footnotes" class="footnotes footnotes-end-of-document" role="doc-endnotes">
 <hr>
 <ol>
 <li id="fn1"><p>My mind skipped over backticks completely, as would become fateful, I think because doing <code>echo #{html} | node</code> sounded stupid to me at first.<a href="#fnref1" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
@@ -77,7 +77,7 @@ end</code></pre>
 <a href="#fnref4" class="footnote-back" role="doc-backlink">↩︎</a>
 </li>
 </ol>
-</aside>
+</section>
 </article>
 <a href="index.html">&lt; back</a>
 </div>
