--- a/just-use-curl.html
+++ b/just-use-curl.html
@@ -49,7 +49,7 @@
 <p>But then I found <a href="https://github.com/typhoeus/typhoeus">Typhoeus</a>, a wrapper around libcurl, which I know has a global timeout including redirects (<code>--max-time</code> through the <code>curl</code> cli). I tried it out and it's pretty simple, easy to use and does the right thing (of course, it's <code>curl</code>)! So this seems to be the endgame, the ultimate solution for my usecase today, at least from my testing so far.</p>
 <p>So, is the conclusion that we should all just use cURL? Really?! A C project started almost 30 years ago?!</p>
 <p>Yes.</p>
-<p>Tongue-in-cheek. But, in retrospect, it sounds obvious - cURL is venerable and legendary. Lindy's law in effect! Of course though, pure ruby gems have many advantages compared to ffi/native gems, not least of which not randomly segfaulting. But we'll see how it goes for me and curl wrappers.</p>
+<p>Tongue-in-cheek. But, in retrospect, it sounds obvious - cURL is venerable and legendary. Lindy's law in effect! Of course though, pure ruby gems have many advantages compared to ffi/native gems, not least of which not randomly segfaulting <a href="#fn4" class="footnote-ref" id="fnref4" role="doc-noteref"><sup>4</sup></a>. But we'll see how it goes for me and curl wrappers.</p>
 <p>Also, please burn <code>Timeout::timeout</code> with fire.</p>
 <section id="footnotes" class="footnotes footnotes-end-of-document" role="doc-endnotes">
 <hr>
@@ -57,6 +57,7 @@
 <li id="fn1"><p>I later found an imperfect but "good enough" solution to this, using HTTP.rb, but it hadn't come to me at this time.<a href="#fnref1" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
 <li id="fn2"><p>There seems to be a <a href="https://github.com/httprb/http/issues/773">timeout redesign</a> coming for the next version, which sounds great!<a href="#fnref2" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
 <li id="fn3"><p>This is when it hits me that HTTP clients are SUPER non-trivial. You'd think making HTTP requests was easy. Yeah.<a href="#fnref3" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
+<li id="fn4"><p>Also, pure ruby gems work in async! A curl wrapper can't yield to the event loop since it's off in libcurl - which isn't obviously isn't aware that we're running it in a fiber in an event loop!<a href="#fnref4" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
 </ol>
 </section>
 </article>
