--- a/cv/index.html
+++ b/cv/index.html
@@ -37,7 +37,7 @@
       Ruby, Rails, Python, Java, C, C++, JavaScript, TypeScript, React; PostgreSQL, ElasticSearch, Kafka, Linux, Bash, Docker, K8s, GCloud, Gitlab CI, Git
   </side-wrap>
   <version>
-    <a target="_blank" href="https://pineman.github.io/cv">HTML version</a> | <a target="_blank" href="https://pineman.github.io/cv/cv.pdf">PDF version</a> | rev: 4b036e6
+    <a target="_blank" href="https://pineman.github.io/cv">HTML version</a> | <a target="_blank" href="https://pineman.github.io/cv/cv.pdf">PDF version</a> | rev: d833ac7
 
   </version>
 </aside>
@@ -50,7 +50,7 @@
       <gig-img><img src="assets/ist.jpg"></gig-img>
       <gig-info>
         <h4><i class="fas fa-briefcase"></i>Student</h4>
-        <h4><i class="fas fa-map-marker-alt fix"></i>Instituto Superior Técnico (IST)</h4>
+        <h4><i class="fas fa-map-marker-alt"></i>Instituto Superior Técnico (IST)</h4>
         <h4><i class="fas fa-clock"></i>Sep. '15 to Jun. '19</h4>
       </gig-info>
     </gig-header>
@@ -67,7 +67,7 @@
       <gig-img><img src="assets/am.png"></gig-img>
       <gig-info>
         <h4><i class="fas fa-briefcase"></i>Software Engineer</h4>
-        <h4><i class="fas fa-map-marker-alt fix"></i><a target="_blank" href="https://amplemarket.com">Amplemarket</a></h4>
+        <h4><i class="fas fa-map-marker-alt"></i><a target="_blank" href="https://amplemarket.com">Amplemarket</a></h4>
         <h4><i class="fas fa-clock"></i>Mar '23 to present</h4>
       </gig-info>
     </gig-header>
@@ -82,7 +82,7 @@
       <gig-img><img src="assets/cf.png"></gig-img>
       <gig-info>
         <h4><i class="fas fa-briefcase"></i>Software Engineer</h4>
-        <h4><i class="fas fa-map-marker-alt fix"></i><a target="_blank" href="https://www.celfocus.com/home/index.php/offer/products/celfocus-one-net-mobile-office">Celfocus - Unified Communications - One Net</a></h4>
+        <h4><i class="fas fa-map-marker-alt"></i><a target="_blank" href="https://www.celfocus.com/home/index.php/offer/products/celfocus-one-net-mobile-office">Celfocus - Unified Communications - One Net</a></h4>
         <h4><i class="fas fa-clock"></i>Aug. '19 to Feb '23</h4>
       </gig-info>
     </gig-header>
@@ -97,7 +97,7 @@
       <gig-img><img src="assets/cms.png"></gig-img>
       <gig-info>
         <h4><i class="fas fa-briefcase"></i>Summer Internship</h4>
-        <h4><i class="fas fa-map-marker-alt fix"></i><a target="_blank" href="https://github.com/amagovpt/autenticacao.gov">Caixa Mágica - Portuguese Citizen Card</a></h4>
+        <h4><i class="fas fa-map-marker-alt"></i><a target="_blank" href="https://github.com/amagovpt/autenticacao.gov">Caixa Mágica - Portuguese Citizen Card</a></h4>
         <h4><i class="fas fa-clock"></i>Jun. '19 to Jul. '19</h4>
       </gig-info>
     </gig-header>
@@ -112,7 +112,7 @@
       <gig-img><img src="assets/fst.png"></gig-img>
       <gig-info>
         <h4><i class="fas fa-briefcase"></i>Fulltime</h4>
-        <h4><i class="fas fa-map-marker-alt fix"></i><a target="_blank" href="http://fst.tecnico.ulisboa.pt/">FST Lisboa</a></h4>
+        <h4><i class="fas fa-map-marker-alt"></i><a target="_blank" href="http://fst.tecnico.ulisboa.pt/">FST Lisboa</a></h4>
         <h4><i class="fas fa-clock"></i>Sep. '17 to Jan. '18</h4>
       </gig-info>
     </gig-header>
@@ -126,7 +126,7 @@
       <gig-img><img src="assets/hs.png"></gig-img>
       <gig-info>
         <h4><i class="fas fa-briefcase"></i>Member</h4>
-        <h4><i class="fas fa-map-marker-alt fix"></i><a target="_blank" href="https://hackerschool.io/">HackerSchool</a></h4>
+        <h4><i class="fas fa-map-marker-alt"></i><a target="_blank" href="https://hackerschool.io/">HackerSchool</a></h4>
         <h4><i class="fas fa-clock"></i>May '16 to Sep. '17</h4>
       </gig-info>
     </gig-header>
