--- a/cv/index.html
+++ b/cv/index.html
@@ -27,17 +27,19 @@
       <li><i class="fas fa-globe"></i><a target="_blank" href="https://pineman.github.io">Website</a></li>
     </ul>
     <hr />
-    <h3>Projects</h3>
-    <a target="_blank" href="https://pineman.github.io/fpt/">gameboy emulator</a>, <a target="_blank" href="https://su.fly.dev">sudoku</a>, <a target="_blank" href="https://abra.fly.dev">abra</a>, <a target="_blank" href="https://github.com/pineman/LEDmatrix">LED Matrix</a>, <a target="_blank" href="https://github.com/pineman/code">playground</a>, <a target="_blank" href="https://github.com/pineman/pineman.github.io">website</a>
-    <hr />
     <h3>Interests</h3>
       High Load, Performance Optimization, Distributed Systems, Reliability
     <hr />
+    <h3>Projects</h3>
+    <a target="_blank" href="https://pineman.github.io/fpt/">gameboy emulator</a>, <a target="_blank" href="https://su.fly.dev">sudoku</a>, <a target="_blank" href="https://abra.fly.dev">abra</a>, <a target="_blank" href="https://github.com/pineman/LEDmatrix">LED Matrix</a>, <a target="_blank" href="https://github.com/pineman/code">playground</a>, <!--<a target="_blank" href="https://github.com/pineman/pineman.github.io">blog</a>-->
+    <!--
+    <hr />
     <h3>Technologies</h3>
-      Ruby, Rails, Python, Java, C, C++, JavaScript, TypeScript, React; PostgreSQL, ElasticSearch, Kafka, Linux, Bash, Docker, K8s, GCloud, Gitlab CI, Git
+    Ruby, Rails, Python, Java, C, C++, JavaScript, TypeScript, React; PostgreSQL, ElasticSearch, Kafka, Linux, Bash, Docker, K8s, GCloud, Gitlab CI, Git
+    -->
   </side-wrap>
   <version>
-    <a target="_blank" href="https://pineman.github.io/cv">HTML version</a> | <a target="_blank" href="https://pineman.github.io/cv/cv.pdf">PDF version</a> | rev: d833ac7
+    <a target="_blank" href="https://pineman.github.io/cv">HTML version</a> | <a target="_blank" href="https://pineman.github.io/cv/cv.pdf">PDF version</a> | rev: 8e6bf30
 
   </version>
 </aside>
