--- a/cv/index.html
+++ b/cv/index.html
@@ -39,7 +39,7 @@
     -->
   </side-wrap>
   <version>
-    <a target="_blank" href="https://pineman.github.io/cv">HTML version</a> | <a target="_blank" href="https://pineman.github.io/cv/cv.pdf">PDF version</a> | rev: 8e6bf30
+    <a target="_blank" href="https://pineman.github.io/cv">HTML version</a> | <a target="_blank" href="https://pineman.github.io/cv/cv.pdf">PDF version</a> | rev: 0fa10c1
 
   </version>
 </aside>
@@ -90,7 +90,7 @@
     </gig-header>
     <gig-description>
       <p><b>Tech:</b> Java (JBoss, Spring, Hibernate), React, PostgreSQL, ActiveMQ; Docker, Bash, Gitlab CI (K8s on GCloud), Helm, Terraform</p>
-      <p><a href='https://www.celfocus.com/home/index.php/offer/products/celfocus-one-net-mobile-office'>One Net</a> is Celfocus's enterprise voice solution, with 5 international deployments. The Call Handling Server (CHS) is a 185k SLOC C++ backend with an in-memory DB (no ORM). It speaks telco protocols (SS7 and SIP) and so has strict SLAs. Its database is provisioned via a web app written in React and Java. It provides a JSON REST API and integrates with many external systems. I started as a CHS dev and later shifted to the web app's backend (rarely frontend). I spearheaded new features, refactorings, migrations with external teams, updates, new conventions across 4 teams, CI/CD for a new project, failover in production, new architecture needs and even onboarding.</p>
+      <p><a href='https://www.celfocus.com/home/index.php/offer/products/celfocus-one-net-mobile-office'>One Net</a> is Celfocus's enterprise voice solution, with 5 international deployments. The Call Handling Server (CHS) is a 190k SLOC C++ backend with an in-memory DB (no ORM). It speaks telco protocols (SS7 and SIP) and so has strict SLAs. Its database is provisioned via a web app written in React and Java. It provides a JSON REST API and integrates with many external systems. I started as a CHS dev and later shifted to the web app's backend (rarely frontend). I spearheaded new features, refactorings, migrations with external teams, updates, new conventions across 4 teams, CI/CD for a new project, failover in production, new architecture needs and onboarding.</p>
     </gig-description>
   </gig>
   <hr />
