--- a/cv/index.html
+++ b/cv/index.html
@@ -39,7 +39,7 @@
     -->
   </side-wrap>
   <version>
-    <a target="_blank" href="https://pineman.github.io/cv">HTML version</a> | <a target="_blank" href="https://pineman.github.io/cv/cv.pdf">PDF version</a> | rev: 0fa10c1
+    <a target="_blank" href="https://pineman.github.io/cv">HTML version</a> | <a target="_blank" href="https://pineman.github.io/cv/cv.pdf">PDF version</a> | rev: d7c3250
 
   </version>
 </aside>
@@ -74,7 +74,7 @@
       </gig-info>
     </gig-header>
     <gig-description>
-      <p><b>Tech:</b> Ruby on Rails, Sidekiq, TypeScript, React; PostgreSQL (&amp; TimescaleDB), ElasticSearch, Kafka</p>
+      <p><b>Tech:</b> Ruby on Rails, Sidekiq, TypeScript, React; PostgreSQL (&amp; TimescaleDB), Redis, ElasticSearch, Kafka, k8s, GCloud</p>
       <p></p>
     </gig-description>
   </gig>
