--- a/k8s-dns.html
+++ b/k8s-dns.html
@@ -9,6 +9,7 @@
 <meta name="keywords" content="technology computer software engineering" />
 <meta property="og:locale" content="en_US" />
 <meta property="og:site_name" content="João Pinheiro" />
+<script src="https://kit.fontawesome.com/84407ba8ee.js" crossorigin="anonymous"></script>
 
   <meta property="og:type" content="article" />
 <meta property="article:author" content="https://pineman.github.io" />
