--- a/k8s-dns.html
+++ b/k8s-dns.html
@@ -26,6 +26,28 @@
   <meta property="og:title" content="It&#39;s always DNS (LLM edition)" />
   <meta name="description" content="Our Kubernetes cluster&#39;s DNS recently experienced partial degradation. We noticed it via DNS resolution errors in Sentry mostly when calling internal service..." />
   <meta property="og:description" content="Our Kubernetes cluster&#39;s DNS recently experienced partial degradation. We noticed it via DNS resolution errors in Sentry mostly when calling internal service..." />
+  <style>
+    .heading-link {
+      opacity: 0;
+      padding-left: 0.5em;
+      color: inherit;
+      text-decoration: none;
+    }
+    h1:hover .heading-link,
+    h2:hover .heading-link,
+    h3:hover .heading-link,
+    h4:hover .heading-link,
+    h5:hover .heading-link,
+    h6:hover .heading-link {
+      opacity: 1;
+    }
+    .heading-link .icon-container {
+      font-size: 0.8em;
+      display: inline-flex;
+      align-items: center;
+      vertical-align: middle;
+    }
+  </style>
 </head>
 <body>
 <div id="wrap">
@@ -38,11 +60,13 @@
 
 <p>Our Kubernetes cluster's DNS recently experienced partial degradation. We noticed it via DNS resolution errors in Sentry mostly when calling internal services.</p>
 <p>This incident took a bit to root cause - not that it was particular thorny in retrospect, per se, but it involved diving into guts of things one doesn't normally care much about. While this isn't the only interesting incident that happened this year <a href="#fn1" class="footnote-ref" id="fnref1" role="doc-noteref"><sup>1</sup></a>, I rather enjoyed the investigation; and since it's not every day I get to drive an incident (thankfully!), I thought I'd log the experience, company postmortem aside.</p>
-<h2 id="preamble">Preamble</h2>
+<h2 id="preamble">Preamble<a href="#preamble" class="heading-link" title="Copy link to heading" onclick="copyHeadingLink(this);"><span class="icon-container"><i class="fa-solid fa-link"></i></span></a>
+</h2>
 <p><img src="assets/always-dns.jpg" alt="The DNS Haiku meme. Claude says: 'A meme styled like a traditional East Asian scroll or painting, featuring black text reading 'It's not DNS / There's no way it's DNS / It was DNS' alongside minimal ink brush illustrations of a flying bird and flowers. The image includes what appears to be Japanese or Chinese characters and a red seal stamp in the corner, mimicking traditional art styles.'"></p>
 <p>It was apparent the issue wasn't happening on 100% of DNS requests, so impact was thankfully rather minimal. One critical internal service we call is pgbouncer, but thankfully resolving those hosts rarely failed since that basically only happens at the app's startup. When they did fail, the pod would just restart; and since the problem wasn't on 100% of queries, the app was pretty much up for the whole duration of the incident. Other workloads that call internal services, such as ML services, run on Sidekiq and so will retry on failure, so they were mostly unaffected. Most of the user-observable impact was some failed exports, since those jobs have a low retry count.</p>
 <p>The incident technically started on a Friday at 3pm UTC, but since its impact was so minimal, we chalked it up as a temporary failure at the time and didn't pay much attention to it. It wasn't until Monday that I was tasked with getting to the bottom of it, as sentry errors were very much piling up <a href="#fn2" class="footnote-ref" id="fnref2" role="doc-noteref"><sup>2</sup></a>.</p>
-<h2 id="let-the-investigation-begin">Let the investigation begin</h2>
+<h2 id="let-the-investigation-begin">Let the investigation begin<a href="#let-the-investigation-begin" class="heading-link" title="Copy link to heading" onclick="copyHeadingLink(this);"><span class="icon-container"><i class="fa-solid fa-link"></i></span></a>
+</h2>
 <p>Our infrastructure engineer was out Friday and Monday, which complicates things a bit, but he actually replied to me during his PTO (thanks Ricardo!): our initial theory was that DNS was failing due to excessive load, as we had seen that in the past <a href="#fn3" class="footnote-ref" id="fnref3" role="doc-noteref"><sup>3</sup></a>. Our kube-dns deployment was already scaled beyond a reasonable scale, using kube-dns-autoscaler <a href="#fn4" class="footnote-ref" id="fnref4" role="doc-noteref"><sup>4</sup></a> (we use kube-dns since we're on GKE).</p>
 <p>My first thought was to restart kube-dns. Spoiler alert, this didn't solve the problem - I had actually tried it on friday. Although, as we'll see later, it actually had a chance to, for an unexpected reason!</p>
 <p>To reproduce the problem, and actually see it with my own eyes, I simply exec'd into a pod and resolved a host on a loop - this gives a very immediate sense of the scale of the problem:</p>
@@ -56,7 +80,8 @@ options ndots:1</code></pre>
 <p>At around this time, my colleague was experimenting with turning off our Kafka consumers to see if the issue really was load related, since they were pretty busy. I kept running the DNS requests loops in multiple pods.</p>
 <p>At a certain point, the loops stop breaking on a slow request! Rejoice! Was our problem solved?</p>
 <p>For a while it really looked like we had been spared a much deeper investigation into the guts of kube-dns. But alas, the problem came back some minutes later.</p>
-<h2 id="false-start">False start</h2>
+<h2 id="false-start">False start<a href="#false-start" class="heading-link" title="Copy link to heading" onclick="copyHeadingLink(this);"><span class="icon-container"><i class="fa-solid fa-link"></i></span></a>
+</h2>
 <p>I then had the idea of talking to the kube-dns pods directly, instead of going through <code>172.18.130.10</code>. Is it possible the problem was this supposed load balancer? Listing the internal ips of the kube-dns pods is easy enough with <code>kubectl -n kube-system get endpoints kube-dns -o jsonpath='{range .subsets[*].addresses[*]}{.ip}{"\n"}{end}</code>. So then I ran some loops on those IPs. Surprisingly, they work correctly!</p>
 <p>This is where we got a bit lost. Why would the main ip be flaky? It's more likely to be a problem in an individual kube-dns pod, rather than the main ip. I skipped lunch and spent a bunch of time trying to figure out how exactly kube-dns works, and why it could be flaky. Looked into the pods definitions; exec'd into them; found out it runs dnsmasq; talked to it directly; checked the args, environment, config; ...</p>
 <p>In retrospect it was probably a bit too much, but we had no idea where the problem was! Not long after, though, I had a better idea: talk to <em>all</em> the kube-dns pods, and see which ones are failing! This is the cool part. I had been brainstorming with Claude pretty much during the whole investigation - we even only half-joked we should probably try <a href="https://aistudio.google.com/app/live">sharing the screen and talking to Gemini 2</a>, which had just come out.</p>
@@ -109,4 +134,10 @@ puts "Number of replicas: #{replicas}"</code></pre>
 <link rel="stylesheet" href="assets/oceanicnext.min.css">
 <script src="assets/highlight.min.js"></script>
 <script>hljs.highlightAll();</script>
+<script>
+  function copyHeadingLink(link) {
+    const url = window.location.href.split('#')[0] + link.getAttribute('href');
+    navigator.clipboard.writeText(url);
+  }
+</script>
 </html>
