--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <meta property="og:title" content="João Pinheiro" />
   <meta property="og:url" content="https://pineman.github.io" />
   <meta property="og:type" content="profile" />
+  <meta property="og:image" content="assets/me.webp" />
   <meta property="profile:first_name" content="João" />
   <meta property="profile:last_name" content="Pinheiro" />
   <meta property="profile:username" content="pineman" />
@@ -156,7 +157,22 @@
       </li>
   </ul>
   <h2 style="margin: 0.5em 0;"><a href="what-i-read.html"><div class="icon-container"><i class="fa-solid fa-link"></i></div>Links</a></h2>
-  <h2 style="margin: 0.5em 0;"><a href="projects.html"><div class="icon-container"><i class="fa-solid fa-layer-group"></i></div>Projects</a></h2>
+  <h2 style="margin: 0.5em 0;"><div class="icon-container" style="margin-top: -4px;"><i class="fa-solid fa-layer-group"></i></div>Projects</h2>
+    <ul>
+      <li><a href="https://github.com/pineman/fpt">fpt - Gameboy emulator</a> (rust)</li>
+      <li><a href="https://github.com/pineman/su">Sudoku browser game</a> (ruby)</li>
+      <li><a href="https://github.com/pineman/abra">abra - Typing speed game</a> (js)</li>
+      <li><a href="https://github.com/pineman/LEDmatrix">LED matrix</a> (python)</li>
+      <li><a href="https://github.com/pineman/r2p">r2p - Play remote games (via RDP) on a Raspberry Pi</a> (C++, Qt)</li>
+      <li><a href="https://github.com/pineman/aoc">Advent of Code solutions</a></li>
+      <li><a href="https://github.com/pineman/code">Everything else - experiments, old projects, challenges</a></li>
+    </ul>
+    Academic selection:
+    <ul>
+      <li><a href="https://github.com/pineman/psis">Multithreaded distributed clipboard</a> (C)</li>
+      <li><a href="https://github.com/pineman/blackjack">Blackjack game</a> (C, SDL2)</li>
+      <li><a href="https://github.com/pineman/wordmorph">Shortest paths between words</a> (C)</li>
+    </ul>
   <a href="https://www.eff.org/" class="img-link"><img src="https://www.eff.org/files/eff-join2_0.png" alt="Join EFF!" width="128px" height="128px"></a>
   <a href="https://www.fsf.org/" class="img-link"><img src="https://static.fsf.org/nosvn/associate/crm/3217362.png" alt="Join the FSF!" width="180px" height="45px"></a>
 </article>
