--- a/just-use-curl.html
+++ b/just-use-curl.html
@@ -26,6 +26,10 @@
   <meta property="og:title" content="Just use curl (or how hard can it be to make HTTP requests?)" />
   <meta name="description" content="Recently we&#39;ve needed to do a lot of HTTP requests to weird APIs. One endpoint in particular is basically the wild west of HTTP - High, unpredictable latency..." />
   <meta property="og:description" content="Recently we&#39;ve needed to do a lot of HTTP requests to weird APIs. One endpoint in particular is basically the wild west of HTTP - High, unpredictable latency..." />
+  <meta property="og:image" content="https://pineman.github.io/assets/link_previews/bc7e4ceafa78584ecdca116deef1ecf3.webp" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:image:alt" content="Just use curl (or how hard can it be to make HTTP requests?)" />
   <style>
     .heading-link {
       opacity: 0;
