--- a/k8s-dns.html
+++ b/k8s-dns.html
@@ -26,6 +26,10 @@
   <meta property="og:title" content="It&#39;s always DNS (LLM edition)" />
   <meta name="description" content="Our Kubernetes cluster&#39;s DNS recently experienced partial degradation. We noticed it via DNS resolution errors in Sentry mostly when calling internal services. ..." />
   <meta property="og:description" content="Our Kubernetes cluster&#39;s DNS recently experienced partial degradation. We noticed it via DNS resolution errors in Sentry mostly when calling internal services. ..." />
+  <meta property="og:image" content="https://pineman.github.io/assets/link_previews/b607f1e75faa5c8258ae2e8a7e091de1.webp" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:image:alt" content="It&#39;s always DNS (LLM edition)" />
   <style>
     .heading-link {
       opacity: 0;
