--- a/aoc3.html
+++ b/aoc3.html
@@ -26,6 +26,10 @@
   <meta property="og:title" content="AoC 2022: day 3, profiling Go, existential crisis" />
   <meta name="description" content="Ok hi! One of my first projects ever was a blog written in python flask (please don&#39;t look at it, it was 2015). Even though I shut it down a couple of months..." />
   <meta property="og:description" content="Ok hi! One of my first projects ever was a blog written in python flask (please don&#39;t look at it, it was 2015). Even though I shut it down a couple of months..." />
+  <meta property="og:image" content="https://pineman.github.io/assets/link_previews/3f2cbe9c9878aa54228cda16662903a3.webp" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:image:alt" content="AoC 2022: day 3, profiling Go, existential crisis" />
   <style>
     .heading-link {
       opacity: 0;
