--- a/ruby-ascii-8bit.html
+++ b/ruby-ascii-8bit.html
@@ -26,6 +26,10 @@
   <meta property="og:title" content="Ruby&#39;s ASCII-8BIT, mailers and feature launches" />
   <meta name="description" content="We&#39;ve hit a couple of bugs during a recent feature launch. This feature&#39;s 1.0 is an email - so no takesies backsies, you better get it right the first time. ..." />
   <meta property="og:description" content="We&#39;ve hit a couple of bugs during a recent feature launch. This feature&#39;s 1.0 is an email - so no takesies backsies, you better get it right the first time. ..." />
+  <meta property="og:image" content="https://pineman.github.io/assets/link_previews/31490f0dcabb0a8fd34e4f8bc2d31aee.webp" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:image:alt" content="Ruby&#39;s ASCII-8BIT, mailers and feature launches" />
   <style>
     .heading-link {
       opacity: 0;
