--- a/ruby-bug-shell-gem.html
+++ b/ruby-bug-shell-gem.html
@@ -26,7 +26,7 @@
   <meta property="og:title" content="I found a (microscopic) ruby bug and it got fixed in 3 hours" />
   <meta name="description" content="I&#39;m using highlight.js for syntax highlighting in this blog, client-side. I was looking to pre-compute it statically, so I wrote a little node.js helper that..." />
   <meta property="og:description" content="I&#39;m using highlight.js for syntax highlighting in this blog, client-side. I was looking to pre-compute it statically, so I wrote a little node.js helper that..." />
-  <meta property="og:image" content="https://pineman.github.io/assets/link_previews/d5bb8670bfc7191c24a0d5e609aa281a.webp" />
+  <meta property="og:image" content="https://pineman.github.io/assets/link_previews/d5bb8670bfc7191c24a0d5e609aa281a.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta property="og:image:alt" content="I found a (microscopic) ruby bug and it got fixed in 3 hours" />
@@ -35,7 +35,7 @@
   <meta name="twitter:creator" content="@pineman_">
   <meta name="twitter:title" content="I found a (microscopic) ruby bug and it got fixed in 3 hours">
   <meta name="twitter:description" content="I&#39;m using highlight.js for syntax highlighting in this blog, client-side. I was looking to pre-compute it statically, so I wrote a little node.js helper that...">
-  <meta name="twitter:image" content="https://pineman.github.io/assets/link_previews/d5bb8670bfc7191c24a0d5e609aa281a.webp">
+  <meta name="twitter:image" content="https://pineman.github.io/assets/link_previews/d5bb8670bfc7191c24a0d5e609aa281a.png">
   <meta name="twitter:image:alt" content="I found a (microscopic) ruby bug and it got fixed in 3 hours">
   <style>
     .heading-link {
