my name is pineman

--- a/index.html
+++ b/index.html
@@ -95,9 +95,11 @@
     <img src="assets/me.webp" alt="A picture of me" width="250px" height="250px" />
   </div>
   <div id="index-header-text">
-    <h1>Hi! I'm João.</h1>
-    <span>Software • Systems • Curiosity</span>
-    <ul>
+    <div id="index-header-text-text">
+      <h1>Hi! I'm pineman</h1>
+      <span>and I like computers</span>
+    </div>
+    <ul id="index-header-text-links">
       <li>
         <div class="icon-container">
           <i class="fa-solid fa-envelope"></i>
