--- a/cv/index.html
+++ b/cv/index.html
@@ -39,7 +39,7 @@
     -->
   </side-wrap>
   <version>
-    <a target="_blank" href="https://pineman.github.io/cv">HTML version</a> | <a target="_blank" href="https://pineman.github.io/cv/cv.pdf">PDF version</a> | rev: 2d6ad9c
+    <a target="_blank" href="https://pineman.github.io/cv">HTML version</a> | <a target="_blank" href="https://pineman.github.io/cv/cv.pdf">PDF version</a> | rev: 37a13c7
 
   </version>
 </aside>
@@ -58,7 +58,7 @@
     </gig-header>
     <gig-description>
       <p style="font-size: 0.9em"><b>Tech:</b> Ruby on Rails, Sidekiq, TypeScript, React; PostgreSQL (&amp; TimescaleDB), Redis, ElasticSearch, Kafka, k8s, GCloud</p>
-      <p>Series A B2B SaaS startup in Sales. I was part of the initial analytics pipeline effort, using TimescaleDB (ELT), dbt and cube.js. <a href='https://www.amplemarket.com/blog/introducing-lists'>Overhauled Lead Lists</a>. Setup SMTP verification servers. Reverse engineered JavaScript code. Wrote a service called 150 times/s at peak. <a href='https://pineman.github.io/2025-02-01_k8s-dns.html'>Three</a> <a href='https://pineman.github.io/2024-05-25_just-use-curl.html'>blog</a> <a href='https://pineman.github.io/2023-11-05_ruby-ascii-8bit.html'>posts</a>. Lots of bug investigations and fixes. Many query plans.</p>
+      <p>Series A B2B SaaS startup in Sales. I co-developed the first analytics pipeline, using TimescaleDB (ELT) and cube.js. <a href='https://www.amplemarket.com/blog/introducing-lists'>Overhauled Lead Lists</a>. Setup SMTP verification. Reverse engineered JavaScript. Wrote a service called 150 times/s at peak. Wrote first Kafka usage. <a href='https://pineman.github.io/2025-02-01_k8s-dns.html'>Three</a> <a href='https://pineman.github.io/2024-05-25_just-use-curl.html'>blog</a> <a href='https://pineman.github.io/2023-11-05_ruby-ascii-8bit.html'>posts</a>. Lots of bug investigations, fixes and query plans.</p>
     </gig-description>
   </gig>
   <hr />
