--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <meta property="og:site_name" content="João Pinheiro" />
 <script src="https://kit.fontawesome.com/84407ba8ee.js" crossorigin="anonymous"></script>
 
+  <link rel="alternate" type="text/markdown" href="index.md">
   <title>João Pinheiro</title>
   <meta name="description" content="Personal homepage of João Pinheiro" />
   <meta property="og:description" content="Personal homepage of João Pinheiro" />
