move what-i-read to links

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <a href="2022-12-03_aoc3.html">AoC 2022: day 3, profiling Go, existential crisis</a>
       </li>
   </ul>
-  <h2><a href="what-i-read.html"><div class="icon-container"><i class="fa-solid fa-link"></i></div>Links</a></h2>
+  <h2><a href="links.html"><div class="icon-container"><i class="fa-solid fa-link"></i></div>Links</a></h2>
   <details style="margin-top: -0.5em;">
     <summary><h2 style="display: inline-block;"><div class="icon-container" style="margin-top: -4px; margin-left: 6px;"><i class="fa-solid fa-layer-group"></i></div>Projects</h2></summary>
     <ul style="margin-top: 0;">
