--- a/notes.html
+++ b/notes.html
@@ -33,6 +33,7 @@
   <ul>
     <li><a href="notes/jargon.html">jargon</a></li>
     <li><a href="notes/laws.html">laws</a></li>
+    <li><a href="notes/notes.html">notes</a></li>
     <li><a href="notes/quotes.html">quotes</a></li>
     <li><a href="notes/save_llm_threads.html">save_llm_threads</a></li>
   </ul>
