--- a/notes/jargon.html
+++ b/notes/jargon.html
@@ -28,9 +28,9 @@
 <a href="../notes.html">&lt; back</a>
 <article>
   <h1>jargon</h1>
-  <p><a href="http://www.catb.org/jargon/html/index.html">http://www.catb.org/jargon/html/index.html</a> jargon file++:</p>
+  <p><a href="http://www.catb.org/jargon/html/go01.html">http://www.catb.org/jargon/html/go01.html</a></p>
+<h2 id="new">New</h2>
 <ul>
-<li>considered harmful</li>
 <li>solved problem</li>
 <li>unreasonable effectiveness</li>
 <li>root of all evil</li>
@@ -39,15 +39,40 @@
 <li>strong opinions weakly held</li>
 <li>refactor</li>
 <li>complexity</li>
+<li>pwn</li>
+<li>stack overflow</li>
+<li>parse error</li>
+</ul>
+<ul>
+<li>when you fail to understand something someone said, or its genuinely badly written</li>
+</ul>
+<ul>
+<li>zero sum</li>
+<li>E_SOMETHING</li>
+</ul>
+<ul>
+<li>e.g. if something fails due to having too many items (or whatever), you might just say E_TOO_MANY_ITEMS</li>
+</ul>
+<h2 id="favorites-in-the-jargon-file">favorites in the jargon file</h2>
+<ul>
+<li>considered harmful</li>
 <li>magic</li>
 <li>box</li>
 <li>bounce</li>
 <li>root</li>
-<li>pwn</li>
 <li>segfault</li>
-<li>parse error</li>
-<li>(stack) overflow</li>
-<li>high order bit</li>
+<li>core dump</li>
+<li>high order bit (high bit)</li>
+<li>hop</li>
+<li>borked/borken</li>
+</ul>
+<h2 id="llm-stuff-wip">LLM stuff? wip</h2>
+<ul>
+<li>ralph</li>
+<li>RLHF'd into oblivion</li>
+<li>slop</li>
+<li>vibe</li>
+<li>agent psychosis</li>
 </ul>
 
 </article>
