--- a/notes/jargon.html
+++ b/notes/jargon.html
@@ -41,17 +41,16 @@
 <li>complexity</li>
 <li>pwn</li>
 <li>stack overflow</li>
-<li>parse error</li>
-</ul>
+<li>parse error
 <ul>
 <li>when you fail to understand something someone said, or its genuinely badly written</li>
-</ul>
-<ul>
+</ul></li>
 <li>zero sum</li>
-<li>E_SOMETHING</li>
-</ul>
+<li>ESOMETHING
 <ul>
-<li>e.g. if something fails due to having too many items (or whatever), you might just say E_TOO_MANY_ITEMS</li>
+<li>e.g. if something fails due to having too many items (or whatever), you might just say ETOOMANYITEMS.</li>
+<li>if you have no context on a joke, you might say ENOCONTEXT</li>
+</ul></li>
 </ul>
 <h2 id="favorites-in-the-jargon-file">favorites in the jargon file</h2>
 <ul>
